Fixed spacing in search results for subject

--- a/step-web/src/main/webapp/scss/search_display.scss
+++ b/step-web/src/main/webapp/scss/search_display.scss
@@ -170,6 +170,10 @@ h4.lexicalGrouping {
     color: darkgrey;
     font-style: italic;
   }
+
+  .passageContentHolder:after {
+    display: none;
+  }
 }
 
 .searchResultStrongHeader {
